adding few css and form page changes

--- a/Pharmceutical_site.html
+++ b/Pharmceutical_site.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graded Assignment Demo</title>
     <link rel="stylesheet" href="Pharmceutical.css"/>
 </head>
 <body>
 <div>
-<header class="header"><h1>Pharmacy</h1></header>
+<h1 class="header">Pharmacy</h1>
 <div class="container">
   <nav>
         <ul class="parent-menu list-element-styling">
@@ -15,7 +16,7 @@
                 <ul class="child-menu list-element-styling">
                     <li><a href="">Fever</a></li>
                     <li><a href="">Musical Pains</a> </li>
-                    <li><a href="">Cold & Coughs</a></li>
+                    <li><a href="">Cold & Cough</a></li>
                 </ul>            
             </li>
             <li class="item-containing-child-menu-link3"><a href="">Health Care</a>
@@ -29,10 +30,11 @@
             </li>
             <li><a href="form.html">Lab Test</a>
         </ul>
-    </nav>
+    </nav>   
 </div>
-</div>   
-    <div class="footer">
+<div class="background-animated-image"></div>
+
+<div class="footer">
         <div class="container">@Copyright Only for demonstration purposes</div>        
     </div>
 </body>
