commtting latest changes

--- a/Pharmceutical_site.html
+++ b/Pharmceutical_site.html
@@ -32,7 +32,72 @@
         </ul>
     </nav>   
 </div>
-<div class="background-animated-image"></div>
+<div class="background-animated-image"></div> 
+<br>
+<div class="covid-care-section">
+    <h1>Covid Care</h1>
+    <div class="cart-items">
+        <h4>Covid Test Kit</h4>
+       <span class="cart-image-layout"> <img src="./Images/Products/c1.jpg"></span>
+        <p>Rs.40</p><br>
+        <p>Offer: Rs.30/-</p>
+        <button class="cart-button-style">Add to Cart</button>
+    </div>
+    <div class="cart-items">
+        <h4>Covid Essentials</h4>
+       <span class="cart-image-layout"> <img src="./Images/Products/c2.jpg"></span>
+       <p>Rs.240</p><br>
+       <p>Offer: Rs.170/-</p>
+        <button class="cart-button-style">Add to Cart</button>
+    </div>
+    <div class="cart-items">
+        <h4>Sanitsizer Bottle</h4>
+       <span class="cart-image-layout"> <img src="./Images/Products/c3.jpg"></span>
+       <p>Rs.99</p><br>
+       <p>Offer: Rs.87/-</p>
+        <button class="cart-button-style">Add to Cart</button>
+    </div>
+    <div class="cart-items">
+        <h4>Mask</h4>
+       <span class="cart-image-layout"> <img src="./Images/Products/c4.jpg"></span>
+       <p>Rs.45</p><br>
+       <p>Offer: Rs.30/-</p>
+        <button class="cart-button-style">Add to Cart</button>
+    </div>
+</div>
+ <br>
+ <div class="diabetes-care-section">
+    <h1>Diabetes Care</h1>
+    <div class="cart-items">
+        <h4>Tablets</h4>
+       <span class="cart-image-layout"> <img src="./Images/Products/d1.jpg"></span>
+        <p>Rs.45</p>
+        <p>Offer: Rs.30/-</p>
+        <button class="cart-button-style">Add to Cart</button>
+    </div>
+    <div class="cart-items">
+        <h4>Dabur Sugarfree Energy powder</h4>
+       <span class="cart-image-layout"> <img src="./Images/Products/d2.jpg"></span>
+       <p>Rs.45</p>
+       <p>Offer: Rs.30/-</p>
+        <button class="cart-button-style">Add to Cart</button>
+    </div>
+    <div class="cart-items">
+        <h4>Tooth Paste</h4>
+       <span class="cart-image-layout"> <img src="./Images/Products/d3.jpg"></span>
+       <p>Rs.45</p><br>
+       <p>Offer: Rs.30/-</p>
+        <button class="cart-button-style">Add to Cart</button>
+    </div>
+    <div class="cart-items">
+        <h4>Cookies</h4>
+       <span class="cart-image-layout"> <img src="./Images/Products/d4.png"></span>
+       <p>Rs.35</p><br>
+       <p>Offer: Rs.30/-</p>
+        <button class="cart-button-style">Add to Cart</button>
+    </div>
+</div>
+</div> 
 
 <div class="footer">
         <div class="container">@Copyright Only for demonstration purposes</div>        
