--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
          <label><input type="text" placeholder="Full Name" class="textfield"></label>
          <label><input type="number" placeholder="Patient id if exists" class="textfield"></label>
          <label><input type="number" placeholder="Contact Number" class="textfield"></label>
-         <label><input type="number" placeholder="Email id" class="textfield"></label>
+         <label><input type="email" placeholder="Email id" class="textfield"></label>
          <br>
          <hr>
          <h4>2. Address</h4>
