--- a/Pharmceutical_site.html
+++ b/Pharmceutical_site.html
@@ -40,28 +40,28 @@
             <h1>Covid Care</h1>
             <div class="cart-items">
                 <h4>Covid Test Kit</h4>
-                <span class="cart-image-layout"> <img src="./Images/Products/c1.jpg"></span>
+                <span class="cart-image-layout"> <img src="https://github.com/tirumalreddy9948/G5S6_HTML-CSS_GradedProject1/tree/master/Images/Images/Products/c1.jpg"></span>
                 <p>Rs.40</p><br>
                 <p>Offer: Rs.30/-</p>
                 <button class="cart-button-style">Add to Cart</button>
             </div>
             <div class="cart-items">
                 <h4>Covid Essentials</h4>
-                <span class="cart-image-layout"> <img src="./Images/Products/c2.jpg"></span>
+                <span class="cart-image-layout"> <img src="https://github.com/tirumalreddy9948/G5S6_HTML-CSS_GradedProject1/tree/master/Images/Products/c2.jpg"></span>
                 <p>Rs.240</p><br>
                 <p>Offer: Rs.170/-</p>
                 <button class="cart-button-style">Add to Cart</button>
             </div>
             <div class="cart-items">
                 <h4>Sanitsizer Bottle</h4>
-                <span class="cart-image-layout"> <img src="./Images/Products/c3.jpg"></span>
+                <span class="cart-image-layout"> <img src="https://github.com/tirumalreddy9948/G5S6_HTML-CSS_GradedProject1/tree/master/Images/Products/c3.jpg"></span>
                 <p>Rs.99</p><br>
                 <p>Offer: Rs.87/-</p>
                 <button class="cart-button-style">Add to Cart</button>
             </div>
             <div class="cart-items">
                 <h4>Mask</h4>
-                <span class="cart-image-layout"> <img src="./Images/Products/c4.jpg"></span>
+                <span class="cart-image-layout"> <img src="https://github.com/tirumalreddy9948/G5S6_HTML-CSS_GradedProject1/tree/master/Images/Products/c4.jpg"></span>
                 <p>Rs.45</p><br>
                 <p>Offer: Rs.30/-</p>
                 <button class="cart-button-style">Add to Cart</button>
@@ -72,28 +72,28 @@
             <h1>Diabetes Care</h1>
             <div class="cart-items">
                 <h4>Tablets</h4>
-                <span class="cart-image-layout"> <img src="./Images/Products/d1.jpg"></span>
+                <span class="cart-image-layout"> <img src="https://github.com/tirumalreddy9948/G5S6_HTML-CSS_GradedProject1/tree/master/Images/Products/d1.jpg"></span>
                 <p>Rs.45</p>
                 <p>Offer: Rs.30/-</p>
                 <button class="cart-button-style">Add to Cart</button>
             </div>
             <div class="cart-items">
                 <h4>Dabur Sugarfree Energy powder</h4>
-                <span class="cart-image-layout"> <img src="./Images/Products/d2.jpg"></span>
+                <span class="cart-image-layout"> <img src="https://github.com/tirumalreddy9948/G5S6_HTML-CSS_GradedProject1/tree/master/Images/Products/d2.jpg"></span>
                 <p>Rs.45</p>
                 <p>Offer: Rs.30/-</p>
                 <button class="cart-button-style">Add to Cart</button>
             </div>
             <div class="cart-items">
                 <h4>Tooth Paste</h4>
-                <span class="cart-image-layout"> <img src="./Images/Products/d3.jpg"></span>
+                <span class="cart-image-layout"> <img src="https://github.com/tirumalreddy9948/G5S6_HTML-CSS_GradedProject1/tree/master/Images/Products/d3.jpg"></span>
                 <p>Rs.45</p><br>
                 <p>Offer: Rs.30/-</p>
                 <button class="cart-button-style">Add to Cart</button>
             </div>
             <div class="cart-items">
                 <h4>Cookies</h4>
-                <span class="cart-image-layout"> <img src="./Images/Products/d4.png"></span>
+                <span class="cart-image-layout"> <img src="https://github.com/tirumalreddy9948/G5S6_HTML-CSS_GradedProject1/tree/master/Images/Products/d4.png"></span>
                 <p>Rs.35</p><br>
                 <p>Offer: Rs.30/-</p>
                 <button class="cart-button-style">Add to Cart</button>
