--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
          <hr>
       </form>
       <div class="lab-image-layout">
-         <img src="./Images/Lab-Test/lab-test.jpg">
+         <img src="https://github.com/tirumalreddy9948/G5S6_HTML-CSS_GradedProject1/tree/master/Images/Lab-Test/lab-test.jpg">
       </div>
    </div>
    <div class="button-style">
