--- a/Pharmceutical_site.html
+++ b/Pharmceutical_site.html
@@ -30,7 +30,7 @@
                             <li><a href="">Pet Care</a></li>
                         </ul>
                     </li>
-                    <li><a href="form.html">Lab Test</a>
+                    <li><a href="https://github.com/tirumalreddy9948/G5S6_HTML-CSS_GradedProject1/blob/master/form.html">Lab Test</a>
                 </ul>
             </nav>
         </div>
